# Class-Widgets-2

./: .git-cliff.toml  README.md  pyproject.toml  requirements.txt
.github/DISCUSSION_TEMPLATE/: Feature.yaml
.github/ISSUE_TEMPLATE/: BugReport.yml  I18nReport.yml  PluginsRequest.yml  config.yml
.github/workflows/: build&release.yml  i18n-update.yml
assets/locales/: en_US.ts  it.qm  it.ts  ja_JP.qm  ja_JP.ts  zh_CN.qm  zh_CN.ts  zh_HK.qm  zh_HK.ts  zh_SIMPLIFIED.qm  zh_SIMPLIFIED.ts
configs/schedules/: default.json
docs/dev/plugin/: index.md
docs/lang/: en_US.md  ja.md
scripts/: update_ts.sh
src/: __init__.py  app.py
src/core/: central.py
src/core/config/: manager.py  model.py
src/core/convertor/: converter.py  slots.py
src/core/notification/: manager.py  model.py  notify.py  provider.py  service.py
src/core/parser/: schedule.py
src/core/plugin/: api.py  components.py  loader.py  manager.py  worker.py
src/core/schedule/: editor.py  manager.py  model.py  runtime.py  service.py
src/core/updater/: bridge.py  downloader.py  workers.py
src/core/utils/: __init__.py  backend.py  subjects.py  tray.py
src/core/widgets/: core.py  model.py
src/core/windows/: windows.py
src/plugins/cw_widgets/: widgets.py
src/qml/: MainInterface.qml
src/qml/ClassWidgets/components/: WidgetLoader.qml  WidgetsContainer.qml  qmldir
src/qml/ClassWidgets/components/editor/: SubjectClip.qml
src/qml/ClassWidgets/plugins/: PluginPage.qml
src/qml/ClassWidgets/windows/: Settings.qml  TrayPanel.qml  WhatsNew.qml
src/qml/widgets/: dynamicNotification.qml
(+12 files in other folders)
