[project]
name = "ClassWidgets-2"
version = "2.0.0.dev20251027"
description = "Class Widgets 2, The Next Class Schedule."
authors = [
    {name = "RinLit",email = "lintusup@foxmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "requests",
    "PySide6~=6.9.3",
    "RinUI>=0.1.9",
    "pydantic",
    "loguru",
    "pyyaml"
]